--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     </properties>
 
     <build>
+        <testSourceDirectory>src/test/java/org/vanadium</testSourceDirectory>
 <!--        <sourceDirectory>src/main/java/org/vanadium</sourceDirectory>-->
         <plugins>
             <plugin>
@@ -26,6 +27,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 
     <dependencies>
