--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
+      - name: Test with Maven
+        run: mvn -B test --file pom.xml
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
