--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
                     <mainClass>org.vanadium.App</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
         </plugins>
 
     </build>
