Fix Pom.xml + package des tests

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
 
     <build>
-        <testSourceDirectory>src/test/java/org/vanadium</testSourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
 <!--        <sourceDirectory>src/main/java/org/vanadium</sourceDirectory>-->
         <plugins>
             <plugin>
