--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup MacOs
+        run: brew install --cask xquartz
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
