--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,17 +2,17 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "release" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "release" ]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup MacOs
-        run: brew install --cask xquartz
+      - name: Install x11
+        uses: coactions/setup-xvfb@v1
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
