--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,14 @@ on:
 jobs:
   pre-release:
     name: "Release"
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install x11
+        uses: coactions/setup-xvfb@v1
+
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
