--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install x11
-        uses: coactions/setup-xvfb@v1.0.1
-
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
@@ -26,7 +23,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B compile --file pom.xml
+        run: xvfb-run mvn -B compile --file pom.xml
 
       - name: Jar with Maven
         run: mvn -B jar:jar --file pom.xml
