--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Test with Maven
-        run: mvn -B test --file pom.xml
+        run: xvfb-run mvn -B test --file pom.xml
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: xvfb-run mvn -B package --file pom.xml
 
