--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
     <build>
         <testSourceDirectory>src/test/java</testSourceDirectory>
 <!--        <sourceDirectory>src/main/java/org/vanadium</sourceDirectory>-->
+        <resources>
+            <resource>
+                <directory>src/main/ressources</directory>
+                <includes>
+                    <include>**/*.png</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -32,11 +40,13 @@
                 <version>3.1.2</version>
             </plugin>
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.3.0</version>
                 <configuration>
                     <archive>
+
                         <manifest>
                             <mainClass>org.vanadium.App</mainClass>
                         </manifest>
