--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,17 +20,20 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - uses: 8BitJonny/gh-get-current-pr@2.2.0
+        id: PR
+
       - name: Build with Maven
         run: xvfb-run mvn -B compile --file pom.xml
 
       - name: Jar with Maven
-        run: "mvn -B jar:jar -DfinalName=Projet-GL-${{ github.event.pull_request.title }} --file pom.xml"
+        run: "mvn -B jar:jar -DfinalName=Projet-GL-${{ steps.PR.outputs.pr_title }} --file pom.xml"
 
       - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.RELEASE_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: true
-          title: "Build ${{ github.event.pull_request.title }}"
+          title: "Build ${{ steps.PR.outputs.pr_title }}"
           files: |
             ./target/*.jar
