--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         run: xvfb-run mvn -B compile --file pom.xml
 
       - name: Jar with Maven
-        run: "mvn -B jar:jar -DfinalName=Projet-GL-${{ steps.PR.outputs.pr_title }} --file pom.xml"
+        run: "mvn -B jar:jar -Djar.finalName=Projet-GL-${{ steps.PR.outputs.pr_title }} --file pom.xml"
 
       - uses: marvinpinto/action-automatic-releases@latest
         with:
