--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,14 @@ jobs:
         with:
           github-token: ${{ secrets.RELEASE_TOKEN }}
 
-      - name: Set env var
-        run: "export RELEASE_VER=${{ steps.PR.outputs.pr_title }}"
-
       - name: Build with Maven
         run: xvfb-run mvn -B compile --file pom.xml
 
       - name: Jar with Maven
         run: "mvn -B jar:jar --file pom.xml"
+
+      - name: Rename file
+        run: "mv target/Projet-GL-1.0-SNAPSHOT.jar target/Projet-GL-${{ steps.PR.outputs.pr_title }}.jar"
 
       - uses: marvinpinto/action-automatic-releases@latest
         with:
