--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
----
 name: "Release"
 
 on:
@@ -20,17 +19,26 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - uses: 8BitJonny/gh-get-current-pr@2.2.0
+        id: PR
+        with:
+          github-token: ${{ secrets.RELEASE_TOKEN }}
+
       - name: Build with Maven
         run: xvfb-run mvn -B compile --file pom.xml
 
       - name: Jar with Maven
-        run: mvn -B jar:jar --file pom.xml
+        run: "mvn -B jar:jar --file pom.xml"
+
+      - name: Rename file
+        run: "mv target/Projet-GL-1.0-SNAPSHOT.jar target/Projet-GL-${{ steps.PR.outputs.pr_title }}.jar"
+
 
       - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.RELEASE_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: true
-          title: "Build"
+          title: "Build ${{ steps.PR.outputs.pr_title }}"
           files: |
             ./target/*.jar
