--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Test with maven
 
 on:
   push:
@@ -22,6 +22,4 @@ jobs:
       - name: Test with Maven
         run: xvfb-run mvn -B test --file pom.xml
 
-      - name: Build with Maven
-        run: xvfb-run mvn -B package --file pom.xml
 
